--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
 <img src="images/taco1.jpg" width="400"/> <br />
 <img src="images/fall.jpg" width="400"/> <br />
 <img src="images/ninja1.jpg" width="400"/> <br />
+<img src="images/ninja2.jpg" width="400"/>
 
 </body>
 </html>
