--- a/index.htm
+++ b/index.htm
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Welcome to josephvanderzwart.com,</h1>
-<h2>home of Joseph Vanderzwart.</h2>
+   <head>
+      <meta charset="UTF-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Joseph Vanderzwart</title>
+      <link rel="stylesheet" href="css/common.css" />
+      <link rel="stylesheet" href="css/responsive.css" />
+  </head>
 
-<p>This page is a work in progress and you should not be here.</p>
-<p>Enjoy some pictures.</p>
-<img src="images/taco1.jpg" width="400"/> <br />
-<img src="images/fall.jpg" width="400"/> <br />
-<img src="images/ninja1.jpg" width="400"/> <br />
-<img src="images/ninja2.jpg" width="400"/>
+  <body>
+    <h1>Welcome to josephvanderzwart.com,</h1>
+    <h2>home of Joseph Vanderzwart.</h2>
 
-</body>
+    <p>This page is a work in progress and you should not be here.</p>
+    <p>Enjoy some pictures.</p>
+    <img src="images/taco1.jpg" width="400"/> <br />
+    <img src="images/fall.jpg" width="400"/> <br />
+    <img src="images/ninja1.jpg" width="400"/> <br />
+    <img src="images/ninja2.jpg" width="400"/>
+  </body>
 </html>
