--- a/index.htm
+++ b/index.htm
@@ -9,14 +9,23 @@
   </head>
 
   <body>
-    <h1>Welcome to josephvanderzwart.com,</h1>
-    <h2>home of Joseph Vanderzwart.</h2>
-
+    <header>
+      <div id="banner" role="banner"></div>
+      <h1>Welcome to josephvanderzwart.com,</h1>
+      <h2>home of Joseph Vanderzwart.</h2>
+    </header>
+    <nav class="menu">
+	  <ul class="menu-list">
+	    <li class="menu-item">
+		  <a class="menu-item-link" href="pictures.htm" alt="Pictures">Pictures</a>
+		</li>
+		<li class="menu-item">
+		  <a class="menu-item-link" href="projects.htm" alt="Projects">Projects</a>
+		</li>
+      </ul>
+	</nav>
+	
+	
     <p>This page is a work in progress and you should not be here.</p>
-    <p>Enjoy some pictures.</p>
-    <img src="images/taco1.jpg" width="400"/> <br />
-    <img src="images/fall.jpg" width="400"/> <br />
-    <img src="images/ninja1.jpg" width="400"/> <br />
-    <img src="images/ninja2.jpg" width="400"/>
   </body>
 </html>
