--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
       <title>Joseph Vanderzwart</title>
       <link rel="stylesheet" href="css/common.css" />
       <link rel="stylesheet" href="css/responsive.css" />
+	  <link rel="icon" type="image/png" href="favicon.png">
   </head>
 
   <body>
@@ -17,7 +18,7 @@
     <nav class="menu">
 	  <ul class="menu-list">
 	    <li class="menu-item">
-		  <a class="menu-item-link" href="pictures.htm" alt="Pictures">Pictures</a>
+		  <a id="pulse" class="menu-item-link" href="pictures.htm" alt="Pictures">Pictures</a>
 		</li>
 		<li class="menu-item">
 		  <a class="menu-item-link" href="projects.htm" alt="Projects">Projects</a>
@@ -27,5 +28,8 @@
 	
 	
     <p>This page is a work in progress and you should not be here.</p>
+	<script src="javascript/zoomy.js"></script>
+	<script src="javascript/pulse.js"></script>
+	
   </body>
 </html>
