--- a/index.htm
+++ b/index.htm
@@ -12,24 +12,28 @@
   <body>
     <header>
       <div id="banner" role="banner"></div>
-      <h1>Welcome to josephvanderzwart.com,</h1>
-      <h2>home of Joseph Vanderzwart.</h2>
+      <h1>Welcome to josephvanderzwart.com</h1>
     </header>
     <nav class="menu">
 	  <ul class="menu-list">
-	    <li class="menu-item">
-		  <a id="pulse" class="menu-item-link" href="pictures.htm" alt="Pictures">Pictures</a>
-		</li>
 		<li class="menu-item">
 		  <a class="menu-item-link" href="projects.htm" alt="Projects">Projects</a>
+		</li>
+		<li class="menu-item">
+		  <a class="menu-item-link" href="https://www.github.com/joseph243" alt="Github" target="_blank">My Github Profile</a>
+		</li>
+	    <li class="menu-item">
+		  <a class="menu-item-link" href="pictures.htm" alt="Pictures">Pictures</a>
 		</li>
       </ul>
 	</nav>
 	
-	
-    <p>This page is a work in progress and you should not be here.</p>
-	<script src="javascript/zoomy.js"></script>
-	<script src="javascript/pulse.js"></script>
-	
+    <p>The website serves many purposes:</p>
+	<ol>
+	  <li>to register my own domain name because Vanderzwart.com is taken. :'(</li>
+	  <li>to experiment with web design via CSS and javascript</li>
+	  <li>to display and track progress for my coding projects</li>
+	  <li>to discover the ugliest combination of colors possible in HTML through trial and error</li>
+	</ol>
   </body>
 </html>
